test_regress/t/t_select_bad_tri.out
%Error: t/t_select_bad_tri.v:10: Selection index is constantly unknown or tristated: lsb=7'bxxxxxxx width=32'sh47
%Error: Exiting due to
